--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         width: 9mm; height: 9mm; 
         background: white; padding: 1px; 
         border-radius: 2px; flex-shrink: 0; 
-        margin-left: 1mm; margin-bottom: 3mm; /* Slight lift to stay within page */
+        margin-left: 1mm; margin-bottom: 3mm; 
         display: flex; align-items: center; justify-content: center;
         margin-right: 1mm;
     }
@@ -277,12 +277,13 @@
     }
     .vb-qr-container img { width: 100%; height: 100%; }
 
-    .vb-info-block { width: 100%; text-align: left; margin-top: 0; }
+    .vb-info-block { width: 100%; text-align: left; margin-top: 1mm; }
     .vb-row-item { display: flex; gap: 2mm; margin-bottom: 1.5mm; align-items: flex-start; }
     .vb-icon-box { color: #FF9933; width: 3mm; font-size: 6pt; margin-top: 1px; }
     .vb-text-val { font-size: 5pt; color: #444; font-weight: 600; line-height: 1.2; text-align: left; }
 
-    .vb-terms { width: 100%; margin-top: auto; margin-bottom: 2mm; }
+    /* Gap Added here */
+    .vb-terms { width: 100%; margin-top: auto; margin-bottom: 8mm; }
     .vb-terms-title { font-size: 4pt; font-weight: 800; color: #002347; text-transform: uppercase; text-align: left; }
     .vb-terms-text { font-size: 3.5pt; color: #666; text-align: left; line-height: 1.1; margin-top: 1px; }
 
@@ -683,7 +684,7 @@
                 .vb-row-item { display: flex; gap: 2mm; margin-bottom: 1.5mm; align-items: flex-start; }
                 .vb-icon-box { color: #FF9933; width: 3mm; font-size: 6pt; margin-top: 1px; }
                 .vb-text-val { font-size: 5pt; color: #444; font-weight: 600; line-height: 1.2; text-align: left; }
-                .vb-terms { width: 100%; margin-top: auto; margin-bottom: 2mm; }
+                .vb-terms { width: 100%; margin-top: auto; margin-bottom: 8mm; }
                 .vb-terms-title { font-size: 4pt; font-weight: 800; color: #002347; text-transform: uppercase; text-align: left; }
                 .vb-terms-text { font-size: 3.5pt; color: #666; text-align: left; line-height: 1.1; margin-top: 1px; }
 
