--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         height: 18%; 
         background: #002347;
         width: 100%;
-        display: flex; align-items: center; justify-content: center; /* Centered content again */
+        display: flex; align-items: center; justify-content: center; 
         position: relative; z-index: 5;
         padding: 0 2mm 0 3mm; 
         clip-path: polygon(0 0, 100% 0, 100% 88%, 0 100%);
@@ -186,7 +186,7 @@
     .v-body {
         flex: 1; position: relative;
         display: flex; flex-direction: column; align-items: center;
-        padding-top: 1.5mm; /* Reduced slightly for space */
+        padding-top: 2mm; 
         background-image: 
             linear-gradient(#f1f1f1 1px, transparent 1px),
             linear-gradient(90deg, #f1f1f1 1px, transparent 1px);
@@ -195,7 +195,7 @@
     }
 
     .v-photo-frame {
-        width: 20mm; height: 24mm; /* Adjusted slightly to fit new QR */
+        width: 20mm; height: 24mm; 
         background: white;
         border-radius: 4px;
         position: relative; z-index: 2; margin-bottom: 1.5mm;
@@ -224,22 +224,33 @@
     .v-lbl { width: 40%; font-weight: 700; color: #666; font-size: 5pt; text-transform: uppercase; letter-spacing: 0.2px; }
     .v-val { width: 60%; font-weight: 800; color: #000; text-align: right; font-size: 6pt; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 
-    /* FRONT MIDDLE QR (Below Details, Above Barcode) */
-    .v-middle-qr-box {
-        width: 9mm; height: 9mm; 
-        background: white; padding: 1px; 
-        margin-top: 1mm; margin-bottom: 2mm;
-        display: flex; align-items: center; justify-content: center;
+    /* === NEW SIDE-BY-SIDE CONTAINER === */
+    .v-codes-row {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 95%;
+        margin-top: auto;
+        margin-bottom: 6mm; /* Clear Footer */
+        gap: 3mm;
         z-index: 2;
     }
-    .v-middle-qr-box img { width: 100%; height: 100%; }
 
-    .v-barcode-area {
-        position: absolute; bottom: 6mm; 
-        z-index: 2; left: 50%; transform: translateX(-50%);
-        width: 90%; height: 8mm; display: flex; align-items: center; justify-content: center;
+    .v-qr-side {
+        width: 9mm; height: 9mm;
+        background: white; padding: 1px;
+        display: flex; align-items: center; justify-content: center;
+        flex-shrink: 0;
+        border: 1px solid #eee;
     }
-    .v-barcode-area svg { width: 100%; height: 100%; }
+    .v-qr-side img { width: 100%; height: 100%; }
+
+    .v-barcode-side {
+        height: 9mm;
+        flex: 1;
+        display: flex; align-items: center; justify-content: center;
+    }
+    .v-barcode-side svg { width: 100%; height: 100%; }
 
     .v-footer {
         position: absolute; bottom: 0; left: 0;
@@ -541,10 +552,11 @@
                                     <div class="v-row"><div class="v-lbl">Date of Issue</div><div class="v-val">${issueDate}</div></div>
                                 </div>
 
-                                <div id="${frontQrId}" class="v-middle-qr-box"></div>
-
-                                <div class="v-barcode-area">
-                                    <svg id="${barcodeId}"></svg>
+                                <div class="v-codes-row">
+                                    <div id="${frontQrId}" class="v-qr-side"></div>
+                                    <div class="v-barcode-side">
+                                        <svg id="${barcodeId}"></svg>
+                                    </div>
                                 </div>
                             </div>
 
@@ -722,7 +734,7 @@
                     }
 
                     /* COPY CSS */
-                    .v-header { height: 18%; background: #002347; width: 100%; display: flex; align-items: center; justify-content: space-between; position: relative; z-index: 5; padding: 0 2mm 0 3mm; clip-path: polygon(0 0, 100% 0, 100% 88%, 0 100%); border-bottom: 2px solid #FF9933; }
+                    .v-header { height: 18%; background: #002347; width: 100%; display: flex; align-items: center; justify-content: center; position: relative; z-index: 5; padding: 0 2mm 0 3mm; clip-path: polygon(0 0, 100% 0, 100% 88%, 0 100%); border-bottom: 2px solid #FF9933; }
                     .v-header::after { content: ''; position: absolute; bottom: 0; left: 0; width: 100%; height: 2px; background: #FF9933; z-index: 6; }
                     .v-header-content { display: flex; align-items: center; flex: 1; }
                     .v-header-logo { width: 9mm; height: auto; margin-right: 1.5mm; }
@@ -743,11 +755,11 @@
                     .v-lbl { width: 40%; font-weight: 700; color: #666; font-size: 5pt; text-transform: uppercase; letter-spacing: 0.2px; }
                     .v-val { width: 60%; font-weight: 800; color: #000; text-align: right; font-size: 6pt; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 
-                    .v-middle-qr-box { width: 9mm; height: 9mm; background: white; padding: 1px; margin-top: 1mm; margin-bottom: 2mm; display: flex; align-items: center; justify-content: center; z-index: 2; }
-                    .v-middle-qr-box img { width: 100%; height: 100%; }
-
-                    .v-barcode-area { position: absolute; bottom: 6mm; z-index: 2; left: 50%; transform: translateX(-50%); width: 90%; height: 8mm; display: flex; align-items: center; justify-content: center; }
-                    .v-barcode-area svg { width: 100%; height: 100%; }
+                    .v-codes-row { display: flex; justify-content: center; align-items: center; width: 95%; margin-top: auto; margin-bottom: 6mm; gap: 3mm; z-index: 2; }
+                    .v-qr-side { width: 9mm; height: 9mm; background: white; padding: 1px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; border: 1px solid #eee; }
+                    .v-qr-side img { width: 100%; height: 100%; }
+                    .v-barcode-side { height: 9mm; flex: 1; display: flex; align-items: center; justify-content: center; }
+                    .v-barcode-side svg { width: 100%; height: 100%; }
 
                     .v-footer { position: absolute; bottom: 0; left: 0; height: 5mm; background: #002347; width: 100%; display: flex; align-items: center; justify-content: center; color: #FF9933; font-size: 5pt; font-weight: 800; letter-spacing: 1px; text-transform: uppercase; z-index: 5; border-top: 1px solid #FF9933; }
 
@@ -756,7 +768,7 @@
                     .vb-header { height: 12%; background: #002347; display: flex; align-items: center; justify-content: center; color: white; font-weight: 800; font-size: 7.5pt; text-transform: uppercase; letter-spacing: 1px; z-index: 2; border-bottom: 2px solid #FF9933; }
                     .vb-body { flex: 1; display: flex; flex-direction: column; align-items: center; padding: 0mm 3mm 3mm 3mm; text-align: center; position: relative; background: #fff; }
                     
-                    /* TERMS RESTORED CSS */
+                    /* TERMS AT TOP (Print) */
                     .vb-terms { width: 100%; margin-top: 2mm; margin-bottom: 2mm; }
                     .vb-terms-title { font-size: 4pt; font-weight: 900; color: #002347; text-transform: uppercase; text-align: center; text-decoration: underline; margin-bottom: 1px; }
                     .vb-terms-text { font-size: 4pt; color: #444; text-align: center; line-height: 1.1; font-weight: 500; }
