--- a/index.html
+++ b/index.html
@@ -224,14 +224,15 @@
     .v-lbl { width: 40%; font-weight: 700; color: #666; font-size: 5pt; text-transform: uppercase; letter-spacing: 0.2px; }
     .v-val { width: 60%; font-weight: 800; color: #000; text-align: right; font-size: 6pt; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 
-    /* === NEW SIDE-BY-SIDE CONTAINER === */
+    /* === SIDE-BY-SIDE CONTAINER (GAP REDUCED) === */
     .v-codes-row {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 95%;
         margin-top: auto;
-        margin-bottom: 6mm; /* Clear Footer */
+        /* REDUCED GAP TO 1mm */
+        margin-bottom: 1mm; 
         gap: 3mm;
         z-index: 2;
     }
@@ -578,7 +579,6 @@
                                 <div class="vb-body">
                                     <div class="vb-terms">
                                         <div class="vb-terms-title">Terms & Conditions:</div>
-                                        </br>
                                         <div class="vb-terms-text">
                                             1. This card is non-transferable property.<br>
                                             2. If found, please return to the address above.
@@ -756,7 +756,7 @@
                     .v-lbl { width: 40%; font-weight: 700; color: #666; font-size: 5pt; text-transform: uppercase; letter-spacing: 0.2px; }
                     .v-val { width: 60%; font-weight: 800; color: #000; text-align: right; font-size: 6pt; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 
-                    .v-codes-row { display: flex; justify-content: center; align-items: center; width: 95%; margin-top: auto; margin-bottom: 6mm; gap: 3mm; z-index: 2; }
+                    .v-codes-row { display: flex; justify-content: center; align-items: center; width: 95%; margin-top: auto; margin-bottom: 1mm; gap: 3mm; z-index: 2; }
                     .v-qr-side { width: 9mm; height: 9mm; background: white; padding: 1px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; border: 1px solid #eee; }
                     .v-qr-side img { width: 100%; height: 100%; }
                     .v-barcode-side { height: 9mm; flex: 1; display: flex; align-items: center; justify-content: center; }
@@ -808,4 +808,3 @@
         }, 800);
     }
 </script>
-
